# routes/reservation/reservation.go
@@ -17,5 +17,6 @@ func ReservationRoutes(e *echo.Echo) {
 	group.GET("/reservations/schedules", reservationController.GetReservationSchedule)
 	group.GET("/rooms/:id/reservation", reservationController.GetRoomsReservationSchedule)
 	group.GET("/dashboard", reservationController.GetDashboard, auth.AuthAdminRoleMiddleware)
+	group.GET("/reservations/history", reservationController.GetReservationHistory)
 	// group.POST("/reservations", reservationController.)
 }
